<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/child_dashboard_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_reorder_24"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/child_dashboard_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/child_first_name"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/child_dashboard_person"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_person_outline_24"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/child_dashboard_image"
        android:layout_width="78dp"
        android:layout_height="72dp"
        android:src="@drawable/ic_avatar"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/child_dashboard_menu"/>

    <TextView
        android:id="@+id/child_dashboard_first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/child_first_name"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/child_dashboard_image"
        app:layout_constraintStart_toStartOf="@id/child_dashboard_image"/>

    <TextView
        android:id="@+id/child_dashboard_last_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/child_last_name"
        android:layout_marginTop="10dp"
        android:layout_marginStart="5dp"
        app:layout_constraintTop_toBottomOf="@id/child_dashboard_image"
        app:layout_constraintStart_toEndOf="@id/child_dashboard_first_name"/>

    <TextView
        android:id="@+id/age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/age"
        app:layout_constraintTop_toBottomOf="@id/child_dashboard_last_name"
        app:layout_constraintStart_toStartOf="@id/child_dashboard_first_name"/>


    <TextView
        android:id="@+id/week"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/week"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/age"/>

    <TextView
        android:id="@+id/month"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/month"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/week"
        app:layout_constraintTop_toBottomOf="@id/age"
        app:layout_constraintEnd_toStartOf="@id/week"/>




    <TextView
        android:id="@+id/day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/day"
        app:layout_constraintStart_toStartOf="@id/week"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/age"
        app:layout_constraintStart_toEndOf="@id/week"/>


    <androidx.cardview.widget.CardView
        android:layout_width="148dp"
        android:layout_height="89dp"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="6dp"
        android:elevation="5dp"
        app:layout_constraintStart_toStartOf="@id/child_dashboard_menu"
        app:layout_constraintTop_toBottomOf="@id/month" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:background="@color/white"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/danger_level"
                android:textColor="@color/black"
                android:background="@color/white"

                android:gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/high"
                android:textColor="@color/red"
                android:background="@color/white"
                android:gravity="center"/>



        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/navigation_view"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_navigation_menu"
        app:itemTextColor="@drawable/bottom_nav_color"
        app:itemIconTint="@drawable/bottom_nav_color" />





</androidx.constraintlayout.widget.ConstraintLayout>
