<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/subtitle_bienvue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subtitle_activity_add_device"
        android:textSize="20sp"
        android:layout_marginTop="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/description_add_device"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/subtitle_activity_description_add_device"
        android:textSize="14sp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subtitle_bienvue"/>

    <TextView
        android:id="@+id/add_device_steps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/subtitle_activity_steps_add_device"
        android:textSize="14sp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/description_add_device"/>

    <ImageView
        android:id="@+id/qrcode"
        android:layout_width="206dp"
        android:layout_height="169dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/qrcode_application"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_device_steps"/>

    <View
        android:id="@+id/view_separation"
        android:layout_width="1dp"
        android:layout_height="60dp"
        android:background="@color/black"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/qrcode"/>

    <androidx.cardview.widget.CardView
        android:layout_width="100dp"
        android:layout_height="50dp"
        app:cardCornerRadius="6dp"
        android:elevation="5dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/view_separation"
        app:layout_constraintTop_toBottomOf="@id/qrcode">


        <Button
            android:id="@+id/add_device_next_button"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:text="@string/next_button"
            style="@style/ButtonStyle"
            app:layout_constraintStart_toEndOf="@id/view_separation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/qrcode" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="100dp"
        android:layout_height="50dp"
        app:cardCornerRadius="6dp"
        android:elevation="5dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/view_separation"
        app:layout_constraintTop_toBottomOf="@id/qrcode">

    <Button
        android:id="@+id/add_device_skip_button"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/skip_button"

        app:layout_constraintEnd_toStartOf="@id/view_separation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/qrcode"
        style="@style/ButtonStyle"/>


</androidx.cardview.widget.CardView>



</androidx.constraintlayout.widget.ConstraintLayout>