<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/add_meeting_activity"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">



<androidx.constraintlayout.widget.ConstraintLayout

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ImageView
        android:id="@+id/add_profile_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_image_addprofile"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/add_profile_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_profile_title"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintTop_toBottomOf="@id/add_profile_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/description_add_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_profile_description"
        android:textSize="16sp"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintTop_toBottomOf="@id/add_profile_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="@+id/description_add_profile"
        app:layout_constraintTop_toBottomOf="@id/description_add_profile">




    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/socialNetworkPlatformLyt"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/description_add_profile"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:hint="@string/socialNetworkPlatform"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/socialNetworkNameLyt"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/socialNetworkPlatformLyt">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:hint="@string/socialNetworkUserName"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/socialNetworkUrlLyt"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/socialNetworkNameLyt">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:hint="@string/socialNetworkURL"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>

    <View
        android:id="@+id/view_separation"
        android:layout_width="1dp"
        android:layout_height="60dp"
        android:background="@color/black"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout2"/>

    <androidx.cardview.widget.CardView
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="6dp"
        android:elevation="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/view_separation"
        app:layout_constraintTop_toBottomOf="@id/linearLayout2">


        <Button
            android:id="@+id/add_profile_next_button"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:text="@string/next_button"
            style="@style/ButtonStyle"
            app:layout_constraintStart_toEndOf="@id/view_separation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linearLayout2" />

    </androidx.cardview.widget.CardView>




    <androidx.cardview.widget.CardView
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="6dp"
        android:elevation="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/view_separation"
        app:layout_constraintTop_toBottomOf="@id/linearLayout2">

        <Button
            android:id="@+id/add_profile_skip_button"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:text="@string/skip_button"
            style="@style/ButtonStyle"
            app:layout_constraintEnd_toStartOf="@id/view_separation"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linearLayout2" />

    </androidx.cardview.widget.CardView>




</androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>