<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/add_meeting_activity"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/add_profile_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm_profile_description"
        android:textSize="26sp"
        android:gravity="center"
        android:layout_marginTop="90dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <ImageView
        android:id="@+id/confirm_profile_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_ok"
        app:layout_constraintTop_toBottomOf="@id/add_profile_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <ImageView
        android:id="@+id/confirm_profile_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:src="@drawable/ic_image_confirmprofile"
        app:layout_constraintTop_toBottomOf="@id/confirm_profile_ok"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <View
        android:id="@+id/view_separation"
        android:layout_width="1dp"
        android:layout_height="60dp"
        android:background="@color/black"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/confirm_profile_logo"/>

    <androidx.cardview.widget.CardView
        android:layout_width="149dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="6dp"
        android:elevation="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/confirm_profile_logo"
        app:layout_constraintStart_toEndOf="@id/view_separation">

        <Button
            android:id="@+id/confirm_profile_continue_button"
            android:layout_width="149dp"
            android:layout_height="50dp"
            style="@style/ButtonStyle"
            android:text="@string/confirm_profile_continue"
            app:layout_constraintStart_toEndOf="@id/view_separation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/confirm_profile_logo" />


    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_width="149dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="6dp"
        android:elevation="5dp"
        app:layout_constraintEnd_toStartOf="@id/view_separation"
        app:layout_constraintTop_toBottomOf="@id/confirm_profile_logo">

        <Button
            android:id="@+id/confirm_profile_add_new_profile_button"
            android:layout_width="149dp"
            android:layout_height="50dp"
            android:background="@color/white"
            android:text="@string/confirm_profile_add_new_profile"
            android:textSize="10sp"
            android:textColor="@color/blue_dark"
            app:layout_constraintEnd_toStartOf="@id/view_separation"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/confirm_profile_logo" />


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="149dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="6dp"
        android:elevation="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_separation" >

        <Button
            android:id="@+id/confirm_profile_modify_profile_information_button"
            android:layout_width="149dp"
            android:layout_height="50dp"
            android:background="@color/white"
            android:text="@string/confirm_profile_modify_profile_information"
            android:textSize="10sp"
            android:textColor="@color/blue_dark"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_separation" />


    </androidx.cardview.widget.CardView>



</androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>